# docs/swagger.yaml
@@ -374,7 +374,7 @@ paths:
           description: Internal Server Error
           schema:
             $ref: '#/definitions/util.ErrorResponse'
-      summary: Creator deletes a new article
+      summary: Creator deletes a news article
       tags:
       - creator
   /creator/{creatorID}/getAllNewsArticles:
@@ -481,6 +481,34 @@ paths:
       summary: Creators publish news article
       tags:
       - creator
+  /creator/updateNewsArticle/{articleID}:
+    patch:
+      consumes:
+      - application/json
+      parameters:
+      - description: Article ID
+        in: path
+        name: articleID
+        required: true
+        type: integer
+      - description: Update News Info
+        in: body
+        name: payload
+        required: true
+        schema:
+          $ref: '#/definitions/creator.CreatorArticleRequestPayload'
+      responses:
+        "200":
+          description: Success
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/util.ErrorResponse'
+      summary: Creator updates news article
   /health:
     get:
       description: Healthcheck endpoint
